--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ROCK PAPER SCISSORS fifth time</title>
-    <link rel="stylesheet" type="ttext/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    
-
+    <div class="selections">
+        <button class="selection">✊</button>
+        <button class="selection">✋</button>
+        <button class="selection">✌</button>
+    </div>
+    <div class="results">
+        <div>
+            You
+            <span class="result-score">0</span>
+        </div>
+        <div>
+            Computer
+            <span class="result-score">0</span>
+        </div>
+    </div>
 
 
 
