--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
             Computer
             <span class="result-score">0</span>
         </div>
+       <!--<div class="result-selection winner">✊</div>
+        <div class="result-selection">✌</div>-->
     </div>
+    
 
 
 
